--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -47,4 +47,11 @@
         border-radius: 2em;
         border: 1px solid #ffffff
     }
+
+    .dropdown-menu, .show {
+        position: relative;
+        top: 0% !important;
+        left: 0% !important;
+        margin-top: 0 !important;
+    }
 }
